--- a/assets/style/style_projects.scss
+++ b/assets/style/style_projects.scss
@@ -1,6 +1,6 @@
-.page__main{
-    
-    .page__content{
-        margin-top: 0;
+.menu__list{
+
+    .projects-link{
+        border-bottom: #727272 solid 1px;        
     }
 }
