--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -91,43 +91,30 @@ body._lock {
 .page__main .page__header .page__container .page__nav-bar .menu .menu__icon {
   display: none;
 }
-.page__main .page__header .page__container .page__nav-bar .menu .menu__list li {
-  height: 20px;
-}
-.page__main .page__header .page__container .page__nav-bar .menu .menu__list li .mobile {
+.page__main .page__header .page__container .page__nav-bar .menu .menu__list li a {
   text-decoration: none;
-  text-transform: uppercase;
   color: #000;
+  text-transform: uppercase;
+  border-bottom: 1px solid transparent;
   letter-spacing: 0.2em;
-  height: 24px;
-  font-size: 0.9375rem;
 }
 .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 25px;
 }
 .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons .icon {
+  height: 20px;
   margin-left: 20px;
 }
 .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons .icon:first-child {
   margin-left: 0;
 }
 .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons .icon svg {
-  height: 100%;
-}
-.page__main .page__header .page__container .page__nav-bar .menu .menu__list .icons-mobile {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-}
-.page__main .page__header .page__container .page__nav-bar .menu .menu__list .icons-mobile a {
-  height: 20px;
-}
-.page__main .page__header .page__container .page__nav-bar .menu .menu__list .icons-mobile a svg {
   height: 100%;
 }
 .page__main .page__header .page__container .page__nav-bar .menu .menu__list .menu__active {
@@ -593,57 +580,30 @@ body._lock {
   }
   .menu__body .menu__list {
     margin: 24px 0 0 0;
-  }
-  .menu__body .menu__list .mobile {
-    font-size: 1.5rem !important;
+    font-size: 24px;
   }
   .menu__body .menu__list li {
-    margin: 0 0 54px 0 !important;
-    height: 24px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin: 0 0 54px 0 !important;
   }
   .menu__body .menu__list li .menu__icons {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-  .menu__body .menu__list a {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .menu__body .icons-mobile {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-top: 100px;
     height: 30px !important;
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
+    position: fixed;
+    bottom: 0px;
   }
-  .menu__body .icons-mobile li {
-    margin: 0 !important;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+  .menu__body .menu__list li .menu__icons .icon {
+    margin-left: 50px !important;
+    height: 25px !important;
   }
-  .menu__body .icons-mobile a {
-    height: 24px !important;
+  .menu__body .menu__list li .menu__icons .icon:first-child {
+    margin-left: 0 !important;
   }
-  .menu__body .icons-mobile a svg {
+  .menu__body .menu__list li .menu__icons .icon svg {
     height: 100% !important;
   }
 
