--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -15,12 +15,16 @@
     @return $result;
 }
 
+
+
+
 // to EM
 // @function em($px){
     //     $result: math.div($px, 16) + em;
     //     @return $result;
     // }
     
+
     
 
 
@@ -116,14 +120,13 @@ $text-color: #000;
 } 
 
 
-
-
             // General reset settings
 * {
     box-sizing: border-box;
     // font-size: 16px;
     font-weight: 400; 
 }
+
 
 
 body{
@@ -205,28 +208,28 @@ body._lock{
                     }
                 }
                 .menu{
-                    // display: flex;
+                        
                     
                     .menu__icon{
                         display: none;
-                    }
+                    }                    
                     
-                    .menu__list{
+                    .menu__list{                        
                         
                         li{
-                            height: 20px;
-                            .mobile{
+                            a{
                                 text-decoration: none;
-                                text-transform: uppercase;
                                 color: $text-color;
+                                text-transform: uppercase;
+                                border-bottom: 1px solid transparent;
                                 letter-spacing: 0.2em;
-                                height: 24px;
-                                font-size: rem(15);
-                                
-                            }
+                            }                            
                             .menu__icons{
                                 display: flex;
+                                align-items: flex-end;
+                                height: 25px;
                                 .icon{
+                                    height: 20px;
                                     margin-left: 20px;
                                     &:first-child{
                                         margin-left: 0;
@@ -236,17 +239,7 @@ body._lock{
                                     }
                                 }
                             }
-                        }
-                        .icons-mobile{
-                            display: flex;
-                            height: fit-content;
-                            a{
-                                height: 20px;
-                                svg{
-                                    height: 100%;
-                                }
-                            }
-                        }
+                        }                        
                         
                         .menu__active{
                             border-bottom: #727272 solid 1px;
@@ -257,6 +250,7 @@ body._lock{
             }
         }
     }
+
 
     // main content styles
 
@@ -560,217 +554,4 @@ body._lock{
     
 }
 
-
-
-
-@media (max-width: 1670px) {
-    .page__container {
-      max-width: 1200px !important;
-    }
-    
-}
-
-// @media (max-width: 1200px) {
-//     .page__container {
-//       max-width: 970px !important;
-//     }
-    
-// }
-
-@media (max-width: 1200px) {
-    .page__container {
-      max-width: 970px !important;
-    }
-    .header__menu{
-        height: 48px;
-        display: flex !important;
-        align-items: center !important;
-    }
-
-    
-    .menu__icon{
-        z-index: 10 !important;
-        display: block !important;
-        position: relative !important;
-        height: 32px !important;
-        width: 42px !important;        
-        cursor: pointer !important;
-        
-    }
-    .menu__icon span,
-    .menu__icon::before, 
-    .menu__icon::after {
-        left: 0 !important;
-        position: absolute !important;
-        height: 3px !important;
-        width: 100% !important;
-        transition: all 0.3s ease 0s !important;
-        background-color: #000 !important;
-    }
-
-    .menu__icon::before, 
-    .menu__icon::after {
-        content: "" !important;
-        
-    }
-    .menu__icon::before{
-        top: 0px !important;
-
-        
-    }
-    
-    .menu__icon::after {
-        bottom: 0px !important;
-    }
-    
-    .menu__icon span{
-               
-        top: 50% !important;
-        transform: scale(1) translate(0px, -50%) !important;
-        
-    }
-
-    .menu__icon._active{
-        span{
-            transform: scale(0) translate(0px, -50%) !important;
-        }
-
-        &::before{
-            top: 50% !important;
-            transform: rotate(-45deg) translate(0px, -50%);
-        }
-
-        &::after{
-            bottom: 50% !important;
-            transform: rotate(45deg) translate(0px, 50%);
-        }
-
-    }
-
-
-
-
-    .menu__body{
-        position: fixed;
-        top: 0;
-        right: -100%;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(242, 242, 242, .9);
-        padding: 112px 48px 48px 48px;
-        transition: all .3s ease 0s;
-        overflow: auto;
-
-        
-        
-        &::before{
-            content: "";
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
-            height: 112px;
-            background-color: $bg-color;
-        }
-
-        .menu__list{
-            margin: 24px 0 0 0; 
-            .mobile{
-                font-size: rem(24) !important;
-            }
-            li{
-                margin: 0 0 54px 0 !important;
-                height: 24px;
-                display: flex;
-                justify-content: center;
-                .menu__icons{
-                    height: fit-content;
-                }
-                
-            }
-            a{
-                width: fit-content;
-            }
-
-            
-        }
-        .icons-mobile{
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: space-between;
-            margin-top: 100px;
-            height: 30px !important;
-            align-items: center !important;
-            li{
-                margin: 0 !important;
-                height: fit-content;
-            }
-            a{
-                height: 24px !important;
-                svg{
-                    height: 100% !important;
-                }
-            }
-        }
-    }
-
-    .menu__body._active{
-        right: 0;
-    }
-
-
-
-        
-    .contacts__what-we-do{
-        display: none !important;
-    }
-    .contacts__place-a-meeting{
-        width: 70% !important;
-        margin: 0 auto;
-    }
-    .more-projects-btn-text{
-        padding: rem(4) rem(12) !important;
-        width: fit-content !important;
-    }
-
-    .info__paragraphs{
-        // display: block !important;
-        .par-group{
-            display: block !important;
-            .par{
-                width: 100% !important;
-            } 
-        }
-    }
-    
-}
-
-@media (min-width: 1200px){
-    .menu__list{
-        display: flex ;
-        align-items: flex-end;
-        li{
-            padding: 0 0 0 40px;
-
-            a{
-                @include text_hover;
-            }
-        }
-    } 
-           
-}
-
-@media (max-width: 768px) {
-
-    .contacts__place-a-meeting{
-        width: 100% !important;
-    }
-    
-       
-}
-
-  @media (max-width: 491px) {
-    .emp-block-hiden{
-        display: none !important;
-    }
-  }
+@import "media"
