--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -1,175 +1,160 @@
-@media (max-width: 1670px) {
-  .page__container {
-    max-width: 1200px !important;
-  }
-}
-@media (max-width: 1200px) {
-  .page__container {
-    max-width: 970px !important;
-  }
-
-  .header__menu {
-    height: 48px;
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
-  }
-
-  .menu__icon {
-    z-index: 10 !important;
-    display: block !important;
-    position: relative !important;
-    height: 32px !important;
-    width: 42px !important;
-    cursor: pointer !important;
-  }
-
-  .menu__icon span,
-.menu__icon::before,
-.menu__icon::after {
-    left: 0 !important;
-    position: absolute !important;
-    height: 3px !important;
-    width: 100% !important;
-    -webkit-transition: all 0.3s ease 0s !important;
-    transition: all 0.3s ease 0s !important;
-    background-color: #000 !important;
-  }
-
-  .menu__icon::before,
-.menu__icon::after {
-    content: "" !important;
-  }
-
-  .menu__icon::before {
-    top: 0px !important;
-  }
-
-  .menu__icon::after {
-    bottom: 0px !important;
-  }
-
-  .menu__icon span {
-    top: 50% !important;
-    -webkit-transform: scale(1) translate(0px, -50%) !important;
-            transform: scale(1) translate(0px, -50%) !important;
-  }
-
-  .menu__icon._active span {
-    -webkit-transform: scale(0) translate(0px, -50%) !important;
-            transform: scale(0) translate(0px, -50%) !important;
-  }
-  .menu__icon._active::before {
-    top: 50% !important;
-    -webkit-transform: rotate(-45deg) translate(0px, -50%);
-            transform: rotate(-45deg) translate(0px, -50%);
-  }
-  .menu__icon._active::after {
-    bottom: 50% !important;
-    -webkit-transform: rotate(45deg) translate(0px, 50%);
-            transform: rotate(45deg) translate(0px, 50%);
-  }
-
-  .menu__body {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(242, 242, 242, 0.9);
-    padding: 112px 48px 48px 48px;
-    -webkit-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    overflow: auto;
-  }
-  .menu__body::before {
-    content: "";
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: 112px;
-    background-color: #F2F2F2;
-  }
-  .menu__body .menu__list {
-    margin: 24px 0 0 0;
-    font-size: 24px;
-  }
-  .menu__body .menu__list li {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin: 0 0 54px 0 !important;
-  }
-  .menu__body .menu__list li .menu__icons {
-    height: 30px !important;
-    position: fixed;
-    bottom: 15px;
-  }
-  .menu__body .menu__list li .menu__icons .icon {
-    margin-left: 50px !important;
-    height: 25px !important;
-  }
-  .menu__body .menu__list li .menu__icons .icon:first-child {
-    margin-left: 0 !important;
-  }
-  .menu__body .menu__list li .menu__icons .icon svg {
-    height: 100% !important;
-  }
-
-  .menu__body._active {
-    right: 0;
-  }
-
-  .contacts__what-we-do {
-    display: none !important;
-  }
-
-  .contacts__place-a-meeting {
-    width: 70% !important;
-    margin: 0 auto;
-  }
-
-  .more-projects-btn-text {
-    padding: 0.25rem 0.75rem !important;
-    width: -webkit-fit-content !important;
-    width: -moz-fit-content !important;
-    width: fit-content !important;
-  }
-
-  .info__paragraphs .par-group {
-    display: block !important;
-  }
-  .info__paragraphs .par-group .par {
-    width: 100% !important;
-  }
-}
-@media (min-width: 1200px) {
-  .menu__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end;
-  }
-  .menu__list li {
-    padding: 0 0 0 40px;
-  }
-}
-@media (max-width: 768px) {
-  .contacts__place-a-meeting {
-    width: 100% !important;
-  }
-}
 @media (max-width: 491px) {
-  .emp-block-hiden {
-    display: none !important;
-  }
+    .page__main .page__content .page__container .page__about-us .about-us .about-us__container .emp-block-hiden{
+        display: none;
+    }
+    .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__place-a-meeting{
+        width: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+}
+
+@media (max-width: 991px) {
+    .page__main .page__content .page__container .page__contacts .contacts .contacts__container .contacts__what-we-do{
+        display: none;
+    }
+    .contacts__place-a-meeting{
+        width: 70%;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) { 
+    
+}
+
+@media (max-width: 1670px) {
+    .page__main .page__header .page__container, .page__main .page__content .page__container, .page__footer .page__container{
+      max-width: 1200px;
+    }    
+}
+
+@media (max-width: 1200px) { 
+    .page__main .page__header .page__container, .page__main .page__content .page__container, .page__footer .page__container{
+        max-width: 970px;
+    }
+    .header__menu{
+        height: 48px;
+        display: flex;
+        align-items: center;
+    }
+    .page__main .page__header .page__container .page__nav-bar .menu .menu__icon{
+        z-index: 10;
+        display: block;
+        position: relative;
+        height: 32px;
+        width: 42px;        
+        cursor: pointer;
+        
+    }
+    .menu__icon span,
+    .menu__icon::before, 
+    .menu__icon::after {
+        left: 0;
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        transition: all 0.3s ease 0s;
+        background-color: #000000;
+    }
+
+    .menu__icon::before, 
+    .menu__icon::after {
+        content: "";
+        
+    }
+    .menu__icon::before{
+        top: 0px;        
+    }
+    
+    .menu__icon::after {
+        bottom: 0px;
+    }
+    
+    .menu__icon span{               
+        top: 50%;
+        transform: scale(1) translate(0px, -50%);
+        
+    }
+
+    .menu__icon._active span{
+        transform: scale(0) translate(0px, -50%);
+    }
+    
+    .menu__icon._active::before{
+        top: 50%;
+        transform: rotate(-45deg) translate(0px, -50%);
+    }
+
+    .menu__icon._active::after{
+        bottom: 50%;
+        transform: rotate(45deg) translate(0px, 50%);
+    }
+
+    
+    .page__main .page__header .page__container .page__nav-bar .menu .menu__body{
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(242, 242, 242, .9);
+        padding: 112px 48px 48px 48px;
+        transition: all .3s ease 0s;
+        overflow: auto;                     
+    }
+
+    .page__main .page__header .page__container .page__nav-bar .menu__body._active{
+        right: 0;
+    }
+
+    .menu .menu__body::before{
+        content: "";
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        height: 112px;
+        background-color: #F2F2F2;
+    }
+    .menu__body .menu__list{
+        margin: 24px 0 0 0;
+        font-size: 24px; 
+        
+    }
+    .menu__body .menu__list li{
+        display: flex;
+        justify-content: center;
+        margin: 0 0 54px 0;            
+                                   
+    } 
+    .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons{
+        position: fixed;
+        bottom: 15px;
+        height: 30px;        
+    }
+    .page__main .page__header .page__container .page__nav-bar .menu .menu__list li .menu__icons .icon{
+        margin-left: 50px;
+        height: 25px;
+    }
+    
+    .menu__icons .icon:first-child{
+        margin-left: 0;
+    }  
+  
+
+    .info__paragraphs .par-group .par{
+        width: 100%;
+    } 
+}
+
+@media (min-width: 1200px) { 
+    .menu__list{
+        display: flex ;
+        align-items: flex-end;        
+    } 
+    .menu__list li{
+        padding: 0 0 0 40px;           
+    }
 }
