--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -350,9 +350,7 @@ body._lock{
                         }
                         
                     }
-                    .project__more-projects{
-                        
-                    }
+                    
                 }
             }
 
@@ -541,7 +539,7 @@ body._lock{
                 }
             }
         }
-    }
+    }    
 }
 
 .section-wrapper{
@@ -549,8 +547,8 @@ body._lock{
     
 }
 
-.page__footer {
-    padding: 0 !important;
+.page__footer.section-wrapper {
+    padding: 0;
 }
 
 
@@ -566,4 +564,3 @@ body._lock{
     
 }
 
-@import "media"
